[gd_scene load_steps=5 format=3 uid="uid://c5r1ldsxkxmmu"]

[ext_resource type="Script" uid="uid://ckka33mjk711l" path="res://LevelEditor.gd" id="1_qnyfc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnyfc"]
bg_color = Color(0.36, 0.36, 0.36, 1)

[sub_resource type="Gradient" id="Gradient_fxd4i"]
colors = PackedColorArray(0.0885599, 0.08855992, 0.08855987, 1, 0.4506483, 0.4506483, 0.45064825, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qnyfc"]
gradient = SubResource("Gradient_fxd4i")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.51282054, 0.491453)

[node name="LevelEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qnyfc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "File"
item_count = 4
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Load"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Save As..."
popup/item_3/id = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_horizontal = 3
text = "No Map Loaded."
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 1

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
theme_override_styles/split_bar_background = SubResource("StyleBoxFlat_qnyfc")
split_offset = 535

[node name="LevelColumn" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
alignment = 1

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/Header"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/Header/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Size:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
min_value = 1.0
max_value = 30.0
value = 3.0
rounded = true
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/Header/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox2" type="SpinBox" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
min_value = 1.0
max_value = 30.0
value = 3.0
rounded = true
alignment = 1

[node name="MapGrid" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 30.85
alignment = 1

[node name="ExtraTextures" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FloorTexture" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures/FloorTexture"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Floor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures/FloorTexture"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Floor Color"

[node name="CeilingTexture" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures/CeilingTexture"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Ceiling"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures/CeilingTexture"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Ceiling Color"

[node name="SkyboxTexture" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures/SkyboxTexture"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Skybox"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/ExtraTextures/SkyboxTexture"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Skybox Texture"
icon = SubResource("GradientTexture2D_qnyfc")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PostProcessOptions" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Fog"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Fog Color"
edit_alpha = false

[node name="SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
tooltip_text = "Fog Start Position
Try negative values for more intense colors!"
step = 0.01
alignment = 1
custom_arrow_step = 1.0

[node name="SpinBox2" type="SpinBox" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
tooltip_text = "Fog End Position
The closer this is to Fog Start, the thicker the fog"
step = 0.01
value = 8.0
alignment = 1
custom_arrow_step = 1.0

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Corner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton2" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Corner Color"
edit_alpha = false

[node name="SpinBox3" type="SpinBox" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
tooltip_text = "Corner Sharpness
Lower values make for a softer corner"
step = 0.01
value = 2.0
alignment = 1
custom_arrow_step = 1.0

[node name="SpinBox4" type="SpinBox" parent="PanelContainer/VBoxContainer/HSplitContainer/LevelColumn/PostProcessOptions"]
layout_mode = 2
tooltip_text = "Corner Weakness
Lower values make the effect more powerful"
step = 0.01
value = 0.1
alignment = 1
custom_arrow_step = 1.0

[node name="TextureColumn" type="ScrollContainer" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="TextureList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/TextureColumn"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 13.9

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer/TextureColumn/TextureList"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "+"

[node name="OpenMapFile" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open an existing map"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.tmap;TC1Engine Map Files;application/tc1map")
use_native_dialog = true

[node name="NewMapFile" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "New Map File"
dialog_hide_on_ok = true
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.tmap;TC1Engine Map Files;application/tc1map")
use_native_dialog = true

[node name="SaveAsMapFile" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Save Map File as..."
dialog_hide_on_ok = true
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.tmap;TC1Engine Map Files;application/tc1map")
use_native_dialog = true

[node name="NotSavedWarning" type="ConfirmationDialog" parent="."]
title = "Warning!"
initial_position = 2
unresizable = true
force_native = true
ok_button_text = "Discard"
dialog_text = "Map has not been saved.
Would you like to discard the current map data?"
dialog_hide_on_ok = false
dialog_close_on_escape = false

[connection signal="file_selected" from="OpenMapFile" to="." method="existing_file_selected"]
[connection signal="file_selected" from="NewMapFile" to="." method="new_file_selected"]
[connection signal="file_selected" from="SaveAsMapFile" to="." method="save_as_file_selected"]
[connection signal="canceled" from="NotSavedWarning" to="." method="keep_file"]
[connection signal="confirmed" from="NotSavedWarning" to="." method="discard_file"]
